--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="50x50" href="./public/logoEmpresa.png" />
+    <link rel="icon" type="image/png" sizes="50x50" href="./icono.png" />
     <link rel="apple-touch-icon" href="./public/logoEmpresa.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chatter</title>
